--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Starter-Code</title>
+    <link rel="stylesheet"  href="/styles/style.css">
 </head>
 <body>
     <h1>Hello World</h1>
+    <img src="/images/download.jpg" alt="firefox-image"/>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
